feature: 完善评论发送，商品详情跳转
