# docs/swagger.json
@@ -67,8 +67,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "user-openid",
-                        "name": "openid",
+                        "description": "商品postId",
+                        "name": "postId",
                         "in": "query",
                         "required": true
                     }
@@ -554,14 +554,19 @@
                 "info": {
                     "type": "string"
                 },
+                "post_id": {
+                    "type": "integer"
+                },
                 "price": {
                     "type": "number"
+                },
+                "title": {
+                    "type": "string"
                 },
                 "user_avatar": {
                     "type": "string"
                 },
                 "username": {
-                    "description": "UserId     string    `json:\"userId\"`",
                     "type": "string"
                 }
             }
@@ -639,7 +644,7 @@
                     "type": "integer"
                 },
                 "img": {
-                    "description": "商品图片URL",
+                    "description": "商品图片URL - 多图用分号隔开",
                     "type": "string"
                 },
                 "info": {
@@ -649,6 +654,10 @@
                 "price": {
                     "description": "商品价格",
                     "type": "number"
+                },
+                "title": {
+                    "description": "商品标题",
+                    "type": "string"
                 },
                 "updatedAt": {
                     "type": "string"
